# gazoo

./: .gitignore  .pylintrc  .style.yapf  LICENSE.md  README.md  package-lock.json  package.json  pyproject.toml  setup.py
gazoo/: __init__.py  config.py  save_status.py  saver.py  util.py  worker.py  worker_status.py  wrapper.py
gazoo_test/: test_backup_file.py  test_util.py
gazoo_test/helpers/: temp_cwd_test_case.py
src/gazoo/: __init__.py  backup_file.py  backup_worker.py  cleanup_worker.py  config.py  util.py  worker.py  wrapper.py
test/: test_config.py  test_util.py
tests/: test_backup_file.py  test_config.py  test_util.py
