[tool.poetry]
name = "gazoo"
version = "0.0.0"
description = "Wrap Minecraft bedrock server to make proper backups."
authors = ["John Schroeder <john@schroedernet.software>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
