[tool.poetry]
name = "gazoo"
version = "0.0.0"
description = "Wrap Minecraft bedrock server to make proper backups."
authors = ["John Schroeder <john@schroedernet.software>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
flake8 = "^3.8.3"
pytest = "^5.4.3"
pylint = "^2.8.3"
mypy = "^0.910"

[tool.poetry.scripts]
gazoo = 'gazoo:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
